--- a/Remotrix/packages.config
+++ b/Remotrix/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AngleSharp" version="0.13.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
-  <package id="System.Text.Encoding.CodePages" version="4.5.0" targetFramework="net461" />
+  <package id="DockPanelSuite" version="3.0.6" targetFramework="net461" />
+  <package id="DockPanelSuite.ThemeVS2015" version="3.0.6" targetFramework="net461" />
+  <package id="Sara-FCTB" version="2.16.26.105" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net461" />
+  <package id="System.Text.Encoding.CodePages" version="4.6.0" targetFramework="net461" />
 </packages>
