--- a/Remotrix/Remotrix.csproj
+++ b/Remotrix/Remotrix.csproj
@@ -39,6 +39,9 @@
     <Reference Include="FastColoredTextBox, Version=2.16.26.100, Culture=neutral, PublicKeyToken=fb8aa12b994ef61b, processorArchitecture=MSIL">
       <HintPath>..\packages\Sara-FCTB.2.16.26.105\lib\net35\FastColoredTextBox.dll</HintPath>
     </Reference>
+    <Reference Include="ScintillaNET, Version=3.6.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\jacobslusser.ScintillaNET.3.6.3\lib\net40\ScintillaNET.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
@@ -65,17 +68,44 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="DockForms\DbStructDockForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="DockForms\DbStructDockForm.Designer.cs">
+      <DependentUpon>DbStructDockForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DockForms\QueryDockForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DockForms\QueryDockForm.Designer.cs">
+      <DependentUpon>QueryDockForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DockForms\ResultsViewDockForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DockForms\ResultsViewDockForm.Designer.cs">
+      <DependentUpon>ResultsViewDockForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="RemotrixConsole.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RemotrixConsole.Designer.cs">
+      <DependentUpon>RemotrixConsole.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Remotrix.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="DockForms\DbStructDockForm.resx">
+      <DependentUpon>DbStructDockForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DockForms\QueryDockForm.resx">
+      <DependentUpon>QueryDockForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DockForms\ResultsViewDockForm.resx">
+      <DependentUpon>ResultsViewDockForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RemotrixConsole.resx">
+      <DependentUpon>RemotrixConsole.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -100,5 +130,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
