--- a/Remotrix/packages.config
+++ b/Remotrix/packages.config
@@ -3,6 +3,7 @@
   <package id="AngleSharp" version="0.13.0" targetFramework="net461" />
   <package id="DockPanelSuite" version="3.0.6" targetFramework="net461" />
   <package id="DockPanelSuite.ThemeVS2015" version="3.0.6" targetFramework="net461" />
+  <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net461" />
   <package id="Sara-FCTB" version="2.16.26.105" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net461" />
   <package id="System.Text.Encoding.CodePages" version="4.6.0" targetFramework="net461" />
